projects/compiler/test/parser/functiondecl_error_typeparam_invalid.out
Error at %FILE_NAME%:1:11
Unexpected token '[', expected one of ',', '>':
  |  func foo<A[]>() {}
               ^